--- a/application/views/frontend/login/register.html
+++ b/application/views/frontend/login/register.html
@@ -236,5 +236,15 @@
 
 </div>
 
+<div class="sideRight">
+<div class="rightBoxContent">
+<form method="POST" action="<?=BASE_PATH?>login/doRegistration" >
+<div class="Title greenBackground"><div>Ads</div><div>Block</div></div>
+<div class="greenText">Email<input type="text" name="username" ></div>
+<div class="greenText">Password<input type="password" name="password"></div>
+<div><input type="submit" value="login"></div>
+</form>
+</div>
+</div>
 <!---------   e: worksheet -------------->
 
