--- a/application/views/frontend/login/register.html
+++ b/application/views/frontend/login/register.html
@@ -4,7 +4,7 @@
 <div class="headerSheet">
 
 <div class="topHeader">
-<img class="adsHeader" src="<?=ASSETS_PATH?>public/images/new-zte-blade.jpg">
+<img class="adsHeader" src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/new-zte-blade.jpg">
 </div>
 <div class="bottomHeader">
 <div class="search floatRight">Search <input type="text" ></div>
@@ -25,7 +25,7 @@
 
 <div class="floatLeft">
 <div class="leftContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/ipad-projector.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/ipad-projector.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
@@ -65,7 +65,7 @@
 
 <div class="floatLeft">
 <div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/GalaxyS_wifi5-0.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/GalaxyS_wifi5-0.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
@@ -171,7 +171,7 @@
 
 
 <div class="leftContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/nokia_n96_by_hilall2006.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/nokia_n96_by_hilall2006.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
@@ -203,7 +203,7 @@
 <div class="floatLeft">
 
 <div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/EYsJpBlJcUwJCRJj.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/EYsJpBlJcUwJCRJj.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="">Arukaterra</a></div>
@@ -216,7 +216,7 @@
 </div>
 
 <div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/cRxBHu0bFslAau4E.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/cRxBHu0bFslAau4E.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="">Arukaterra</a></div>
