--- a/application/views/frontend/profile/profile_view.html
+++ b/application/views/frontend/profile/profile_view.html
@@ -5,7 +5,7 @@
 <div class="headerSheet">
 
 <div class="topHeader">
-<img class="adsHeader" src="<?=ASSETS_PATH?>public/images/GalaxyS_wifi5-0.jpg">
+<img class="adsHeader" src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/GalaxyS_wifi5-0.jpg">
 </div>
 <div class="bottomHeader">
 <div class="search floatRight">Search <input type="text" ></div>
@@ -28,7 +28,7 @@
 <div class="floatLeft">
 
 <div class="leftContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/3292942212_7e589bb46d_o.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/3292942212_7e589bb46d_o.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
@@ -56,7 +56,7 @@
 <div class="adsComment"><input type="text"></div>
 </div>
 <div class="leftContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/nokia_n96_by_hilall2006.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/nokia_n96_by_hilall2006.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
@@ -88,7 +88,7 @@
 <div class="floatLeft">
 
 <div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/EYsJpBlJcUwJCRJj.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/EYsJpBlJcUwJCRJj.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="">Arukaterra</a></div>
@@ -101,7 +101,7 @@
 </div>
 
 <div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/images/cRxBHu0bFslAau4E.jpg"></div>
+<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/cRxBHu0bFslAau4E.jpg"></div>
 <div class="adsComment">
 	<div class="userInfoComment">
 		<div class="floatLeft"><a href="">Arukaterra</a></div>
