--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -1,7 +1,26 @@
 
-
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<link type="text/css" rel="stylesheet" href="<?=ASSETS_PATH?>public/css/styles.css">
-
- 
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>ADS BLOCK</title>
+        <link href="<?=ASSETS_PATH?>web/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="<?=ASSETS_PATH?>web/css/fonts.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="<?=ASSETS_PATH?>web/css/fontello.css">
+        <link rel="stylesheet" href="<?=ASSETS_PATH?>web/css/animation.css">
+        <!--[if IE 7]>
+            <link rel="stylesheet" href="css/fontello-ie7.css">
+        <![endif]-->
+        <script>
+            function toggleCodes(on) {
+                var obj = document.getElementById('icons');
+                
+                if (on) {
+                  obj.className += ' codesOn';
+                } else {
+                  obj.className = obj.className.replace(' codesOn', '');
+                }
+              }
+        </script>
+        <script src="<?=ASSETS_PATH?>web/js/jquery-1.4.2.min.js"></script>
+      
+        <script src="<?=ASSETS_PATH?>web/js/script.js"></script>
+		
+  
