--- a/application/views/frontend/home/homepage.html
+++ b/application/views/frontend/home/homepage.html
@@ -1,242 +1,159 @@
 
+           
 
-<div class="contentWork">
-
-<!---------   s: Header -------------->
-<div class="headerSheet">
-
-<div class="topHeader">
-<img class="adsHeader" src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/new-zte-blade.jpg">
-</div>
-<div class="bottomHeader">
-<div class="search floatRight">Search <input type="text" ></div>
-</div>
-<div class="clearBoth"> </div>
-</div>
-
-
-<!---------   e: Header -------------->
-
-<!---------   s: worksheet -------------->
-<div class="workSheet">
-<div class="clearBoth"> </div>
-<div class="diffWork">
-<div class="bottomHeader mBottom10">
-<div class="search floatRight"><b>Hits Ads</b></div>
-</div>
-
-<div class="floatLeft">
-<div class="leftContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/ipad-projector.jpg"></div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment"><input type="text"></div>
-</div>
-
-</div>
-
-<div class="floatLeft">
-<div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/GalaxyS_wifi5-0.jpg"></div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment"><input type="text"></div>
-</div>
-
-</div>
-
-<div class="clearBoth"> </div>
-</div>
-
-
-<div class="diffWork">
-<div class="adsScroll">
-
-<div class="leftContents floatLeft">
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a target="_blank" href="">Desktop Based Application</a></div>
-		<div class="floatRight"><span>Generaly</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">JAVA, <i><a target="_blank" href="">J2EE</a>, <a target="_blank" href="">J2SE</a>, <a target="_blank" href="">J2ME</a></i></div>
-	<div class="userComment">Visual Basic, <i><a target="_blank" href="">.NET</a></i></div>
-	<div class="userComment">C, <i><a target="_blank" href="">C#</a></i></div>	
-</div>
-</div>
-
-
-
-<div class="leftContents floatLeft">
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a target="_blank" href="">Desktop Based Application</a></div>
-		<div class="floatRight"><span>Generaly</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">JAVA, <i><a target="_blank" href="">J2EE</a>, <a target="_blank" href="">J2SE</a>, <a target="_blank" href="">J2ME</a></i></div>
-	<div class="userComment">Visual Basic, <i><a target="_blank" href="">.NET</a></i></div>
-	<div class="userComment">C, <i><a target="_blank" href="">C#</a></i></div>	
-</div>
-</div>
-
-
-<div class="leftContents floatLeft">
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a target="_blank" href="">Desktop Based Application</a></div>
-		<div class="floatRight"><span>Generaly</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">JAVA, <i><a target="_blank" href="">J2EE</a>, <a target="_blank" href="">J2SE</a>, <a target="_blank" href="">J2ME</a></i></div>
-	<div class="userComment">Visual Basic, <i><a target="_blank" href="">.NET</a></i></div>
-	<div class="userComment">C, <i><a target="_blank" href="">C#</a></i></div>	
-</div>
-</div>
-
-
-<div class="leftContents floatLeft">
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a target="_blank" href="">Desktop Based Application</a></div>
-		<div class="floatRight"><span>Generaly</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">JAVA, <i><a target="_blank" href="">J2EE</a>, <a target="_blank" href="">J2SE</a>, <a target="_blank" href="">J2ME</a></i></div>
-	<div class="userComment">Visual Basic, <i><a target="_blank" href="">.NET</a></i></div>
-	<div class="userComment">C, <i><a target="_blank" href="">C#</a></i></div>	
-</div>
-
-</div>
-</div>
-<div class="clearBoth"> </div>
-</div>
-<div class="diffWork">
-<div class="bottomHeader mBottom10">
-<div class="search floatRight"><b>Your's Ads</b></div>
-</div>
-
-<div class="floatLeft">
-
-
-
-<div class="leftContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/nokia_n96_by_hilall2006.jpg"></div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="<?=BASE_PATH?>profile">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment"><input type="text"></div>
-</div>
-</div>
-
-<div class="floatLeft">
-
-<div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/EYsJpBlJcUwJCRJj.jpg"></div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment"><input type="text"></div>
-</div>
-
-<div class="rightContents ">
-<div class="adsContent"><img src="<?=ASSETS_PATH?>public/<?=ASSETS_PATH?>web/images/cRxBHu0bFslAau4E.jpg"></div>
-<div class="adsComment">
-	<div class="userInfoComment">
-		<div class="floatLeft"><a href="">Arukaterra</a></div>
-		<div class="floatRight"><span>Yesterday</span> <span>11:20 pm</span></div>
-		<div class="clearBoth"> </div>
-	</div>
-	<div class="userComment">komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada,komentar dari mana aja yang penting ada</div>
-</div>
-<div class="adsComment"><input type="text"></div>
-</div>
-</div>
-
-<div class="clearBoth"> </div>
-</div>
-
-
-
-</div>
-
-<!---------   e: worksheet -------------->
-
+                <!-- content right : s -->
+                <div class="contentRight">
+                    <div class="contentRightIn">
+                        <div class="item">
+                            <div class="itemText">
+                                <div class="left"><a href="#" class="CatTag">
+                                        Gadget
+                                    </a></div>
+                                <div class="right">
+                                <span>
+                                    <i class="icon-thumbs-up">&nbsp;13</i>
+                                    <i class="icon-comment-1">&nbsp;240</i>
+                                </span>
+                                </div>
+                                <div class="clearit"></div>
+                                <a href="readingPage.html"  class=" aMainCon titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
+                            </div>
+                            <div class="itemImg">
+                                <img src="<?=ASSETS_PATH?>web/images/img3.jpg">
+                            </div>
+                            <!-- comment : s -->
+                            <!-- list comment : s -->
+                            <div class="mainComment">
+                                <div class="listComment listCommentMain clearfix">
+                                    <div class="imgProfCom left"></div>
+                                    <div class="boxNameCom left">
+                                        <a href="#">Rizki Mardita</a>
+                                        <h6>&nbsp; - 3 minutes ago</h6>
+                                        <p class="pMainComm">Hacker of minds. Staff writer at ReadWritend Burning Man blogger. Cutting my teeth and trying out voices Decent explainer. Hacker of minds.</p>
+                                    </div>
+                                </div>
+                                <div class="listComment listCommentMain clearfix">
+                                    <div class="imgProfCom left"></div>
+                                    <div class="boxNameCom left">
+                                        <a href="#">Rizki Mardita</a>
+                                        <h6>&nbsp; - 3 minutes ago</h6>
+                                        <p class="pMainComm">Hacker of minds. Staff writer at ReadWritend Burning Man blogger. Cutting my teeth and trying out voices Decent explainer. Hacker of minds.</p>
+                                    </div>
+                                </div>
+                                </div>
+                                <!-- list comment : e -->
+                            
+                            <!-- comment : e -->
+                        </div>
+                        <div class="item3">
+                            <div class="itemText">
+                                <div class="left"><a href="#" class="CatTag">
+                                        Gadget
+                                    </a></div>
+                                <div class="right">
+                                <span>
+                                    <i class="icon-thumbs-up">&nbsp;13</i>
+                                    <i class="icon-comment-1">&nbsp;240</i>
+                                </span>
+                                </div>
+                                <div class="clearit"></div>
+                                <a href="readingPage.html"  class="titleBlock">3 Lets something new togedher</a>
+                            </div>
+                            <div class="itemImg">
+                                <img src="<?=ASSETS_PATH?>web/images/img5.jpg">
+                            </div>
+                        </div>
+                        <div class="item3">
+                            <div class="itemText">
+                                <div class="left"><a href="#" class="CatTag">
+                                        Gadget
+                                    </a></div>
+                                <div class="right">
+                                <span>
+                                    <i class="icon-thumbs-up">&nbsp;13</i>
+                                    <i class="icon-comment-1">&nbsp;240</i>
+                                </span>
+                                </div>
+                                <div class="clearit"></div>
+                                <a href="readingPage.html" class="titleBlock">Lorem ipsum dolor sit amet</a>
+                            </div>
+                            <div class="itemImg">
+                                <img src="<?=ASSETS_PATH?>web/images/img1.jpg">
+                            </div>
+                        </div>
+                        <div class="item2">
+                            <div class="itemText">
+                                <div class="left"><a href="#" class="CatTag">
+                                        Gadget
+                                    </a></div>
+                                <div class="right">
+                                <span>
+                                    <i class="icon-thumbs-up">&nbsp;13</i>
+                                    <i class="icon-comment-1">&nbsp;240</i>
+                                </span>
+                                </div>
+                                <div class="clearit"></div>
+                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
+                            </div>
+                            <div class="itemImg">
+                                <img src="<?=ASSETS_PATH?>web/images/img3.jpg">
+                            </div>
+                        </div>
+                        <div class="item2">
+                            <div class="itemText">
+                                <div class="left"><a href="#" class="CatTag">
+                                        Gadget
+                                    </a></div>
+                                <div class="right">
+                                <span>
+                                    <i class="icon-thumbs-up">&nbsp;13</i>
+                                    <i class="icon-comment-1">&nbsp;240</i>
+                                </span>
+                                </div>
+                                <div class="clearit"></div>
+                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
+                            </div>
+                            <div class="itemImg">
+                                <img src="<?=ASSETS_PATH?>web/images/img5.jpg">
+                            </div>
+                        </div>
+                        <div class="item3">
+                            <div class="itemText">
+                                <div class="left"><a href="#" class="CatTag">
+                                        Gadgetx
+                                    </a></div>
+                                <div class="right">
+                                <span>
+                                    <i class="icon-thumbs-up">&nbsp;13</i>
+                                    <i class="icon-comment-1">&nbsp;240</i>
+                                </span>
+                                </div>
+                                <div class="clearit"></div>
+                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
+                            </div>
+                            <div class="itemImg">
+                                <img src="<?=ASSETS_PATH?>web/images/img4.jpg">
+                            </div>
+                        </div>
+                        <div class="item3">
+                            <div class="itemText">
+                                <div class="left"><a href="#" class="CatTag">
+                                        Gadgetx
+                                    </a></div>
+                                <div class="right">
+                                <span>
+                                    <i class="icon-thumbs-up">&nbsp;13</i>
+                                    <i class="icon-comment-1">&nbsp;240</i>
+                                </span>
+                                </div>
+                                <div class="clearit"></div>
+                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
+                            </div>
+                            <div class="itemImg">
+                                <img src="<?=ASSETS_PATH?>web/images/img2.jpg">
+                            </div>
+                        </div>
+                        <div class="clearit"></div>
+                    </div>
+                </div>
+                <!-- content right : e -->
