--- a/application/views/frontend/login/login_viewer.html
+++ b/application/views/frontend/login/login_viewer.html
@@ -1,159 +1,11 @@
 
            
 
-                <!-- content right : s -->
-                <div class="contentRight">
-                    <div class="contentRightIn">
-                        <div class="item">
-                            <div class="itemText">
-                                <div class="left"><a href="#" class="CatTag">
-                                        Gadget
-                                    </a></div>
-                                <div class="right">
-                                <span>
-                                    <i class="icon-thumbs-up">&nbsp;13</i>
-                                    <i class="icon-comment-1">&nbsp;240</i>
-                                </span>
-                                </div>
-                                <div class="clearit"></div>
-                                <a href="readingPage.html"  class=" aMainCon titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
-                            </div>
-                            <div class="itemImg">
-                                <img src="<?=ASSETS_PATH?>web/images/img3.jpg">
-                            </div>
-                            <!-- comment : s -->
-                            <!-- list comment : s -->
-                            <div class="mainComment">
-                                <div class="listComment listCommentMain clearfix">
-                                    <div class="imgProfCom left"></div>
-                                    <div class="boxNameCom left">
-                                        <a href="#">Rizki Mardita</a>
-                                        <h6>&nbsp; - 3 minutes ago</h6>
-                                        <p class="pMainComm">Hacker of minds. Staff writer at ReadWritend Burning Man blogger. Cutting my teeth and trying out voices Decent explainer. Hacker of minds.</p>
-                                    </div>
-                                </div>
-                                <div class="listComment listCommentMain clearfix">
-                                    <div class="imgProfCom left"></div>
-                                    <div class="boxNameCom left">
-                                        <a href="#">Rizki Mardita</a>
-                                        <h6>&nbsp; - 3 minutes ago</h6>
-                                        <p class="pMainComm">Hacker of minds. Staff writer at ReadWritend Burning Man blogger. Cutting my teeth and trying out voices Decent explainer. Hacker of minds.</p>
-                                    </div>
-                                </div>
-                                </div>
-                                <!-- list comment : e -->
-                            
-                            <!-- comment : e -->
-                        </div>
-                        <div class="item3">
-                            <div class="itemText">
-                                <div class="left"><a href="#" class="CatTag">
-                                        Gadget
-                                    </a></div>
-                                <div class="right">
-                                <span>
-                                    <i class="icon-thumbs-up">&nbsp;13</i>
-                                    <i class="icon-comment-1">&nbsp;240</i>
-                                </span>
-                                </div>
-                                <div class="clearit"></div>
-                                <a href="readingPage.html"  class="titleBlock">3 Lets something new togedher</a>
-                            </div>
-                            <div class="itemImg">
-                                <img src="<?=ASSETS_PATH?>web/images/img5.jpg">
-                            </div>
-                        </div>
-                        <div class="item3">
-                            <div class="itemText">
-                                <div class="left"><a href="#" class="CatTag">
-                                        Gadget
-                                    </a></div>
-                                <div class="right">
-                                <span>
-                                    <i class="icon-thumbs-up">&nbsp;13</i>
-                                    <i class="icon-comment-1">&nbsp;240</i>
-                                </span>
-                                </div>
-                                <div class="clearit"></div>
-                                <a href="readingPage.html" class="titleBlock">Lorem ipsum dolor sit amet</a>
-                            </div>
-                            <div class="itemImg">
-                                <img src="<?=ASSETS_PATH?>web/images/img1.jpg">
-                            </div>
-                        </div>
-                        <div class="item2">
-                            <div class="itemText">
-                                <div class="left"><a href="#" class="CatTag">
-                                        Gadget
-                                    </a></div>
-                                <div class="right">
-                                <span>
-                                    <i class="icon-thumbs-up">&nbsp;13</i>
-                                    <i class="icon-comment-1">&nbsp;240</i>
-                                </span>
-                                </div>
-                                <div class="clearit"></div>
-                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
-                            </div>
-                            <div class="itemImg">
-                                <img src="<?=ASSETS_PATH?>web/images/img3.jpg">
-                            </div>
-                        </div>
-                        <div class="item2">
-                            <div class="itemText">
-                                <div class="left"><a href="#" class="CatTag">
-                                        Gadget
-                                    </a></div>
-                                <div class="right">
-                                <span>
-                                    <i class="icon-thumbs-up">&nbsp;13</i>
-                                    <i class="icon-comment-1">&nbsp;240</i>
-                                </span>
-                                </div>
-                                <div class="clearit"></div>
-                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
-                            </div>
-                            <div class="itemImg">
-                                <img src="<?=ASSETS_PATH?>web/images/img5.jpg">
-                            </div>
-                        </div>
-                        <div class="item3">
-                            <div class="itemText">
-                                <div class="left"><a href="#" class="CatTag">
-                                        Gadgetx
-                                    </a></div>
-                                <div class="right">
-                                <span>
-                                    <i class="icon-thumbs-up">&nbsp;13</i>
-                                    <i class="icon-comment-1">&nbsp;240</i>
-                                </span>
-                                </div>
-                                <div class="clearit"></div>
-                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
-                            </div>
-                            <div class="itemImg">
-                                <img src="<?=ASSETS_PATH?>web/images/img4.jpg">
-                            </div>
-                        </div>
-                        <div class="item3">
-                            <div class="itemText">
-                                <div class="left"><a href="#" class="CatTag">
-                                        Gadgetx
-                                    </a></div>
-                                <div class="right">
-                                <span>
-                                    <i class="icon-thumbs-up">&nbsp;13</i>
-                                    <i class="icon-comment-1">&nbsp;240</i>
-                                </span>
-                                </div>
-                                <div class="clearit"></div>
-                                <a href="readingPage.html" class="titleBlock">Yet Jeter's control of his career has mirrored his command of the middle of a baseball diamond.</a>
-                            </div>
-                            <div class="itemImg">
-                                <img src="<?=ASSETS_PATH?>web/images/img2.jpg">
-                            </div>
-                        </div>
-                        <div class="clearit"></div>
-                    </div>
-                </div>
-                <!-- content right : e -->
+ <div style="top:90px;position:relative">
+					<form method="POST" action="<?=BASE_PATH?>login/goLogin" >
+						 
+						<div class="greenText">Email<input type="text" name="username" ></div>
+						<div class="greenText">Password<input type="password" name="password"></div>
+						<div><input type="submit" value="login"></div>
+					</form>
+      </div>
