--- a/application/views/frontend/navigation-left.html
+++ b/application/views/frontend/navigation-left.html
@@ -117,7 +117,7 @@
                             </li>
                             <li class="clearfix">
  
-                                <div class="categoriesTitle left"><a href="#">Logout</a></div>
+                                <div class="categoriesTitle left"><a href="<?=BASE_PATH?>logout">Logout</a></div>
                             </li>
                            
                             
